--- a/css/ui.scss
+++ b/css/ui.scss
@@ -838,6 +838,7 @@
       display:inline-block;
       width:25%;
       padding:16px;
+      vertical-align: top;
       + li {
         margin-top:0;
       }
